--- a/emmamcgillis.html
+++ b/emmamcgillis.html
@@ -11,6 +11,14 @@
 
 <div class="header">
 
+        <div class="topnav">
+            <a  href="emmamcgillis.html">HOME</a>
+            <a href="#contact">CONTACT</a>
+            <a href="about.html">ABOUT</a>
+          </div>
+    
+    
+
  <div class="emma"> EMMA </div>
 
 <div class="arrow"> <a href="#content">&#8595</a> </div>
