--- a/about.html
+++ b/about.html
@@ -7,8 +7,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
 <head>
-
-    <div class="header">HELLO</div>
+    <div class="header"> 
+        <div class="topnav">
+            <a  href="emmamcgillis.html">HOME</a>
+            <a href="#contact">CONTACT</a>
+            <a href="about.html">ABOUT</a>
+          </div>
+          <div class="header2">HELLO!</div>
+    </div>
+    
 
     <div class="content">
 
