--- a/perception.html
+++ b/perception.html
@@ -9,9 +9,9 @@
 
 <div class="header"> 
     <div class="topnav">
-        <a  href="emmamcgillis.html">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="about.html">About</a>
+        <a  href="emmamcgillis.html">HOME</a>
+        <a href="#contact">CONTACT</a>
+        <a href="about.html">ABOUT</a>
       </div>
 
 </div>
