--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     <div class="header"> 
         <div class="topnav">
             <a  href="emmamcgillis.html">HOME</a>
-            <a href="#contact">CONTACT</a>
             <a href="about.html">ABOUT</a>
           </div>
           <div class="header2">HELLO!</div>
@@ -19,7 +18,7 @@
 
     <div class="content">
 
-    <div class="image1">Image1</div>
+    <div class="image1"> <img src="Images/portrait2.png"> </div>
     <div class="bio"> 
      <p>Emma McGillis is a senior graphic design major at Lehigh University, where she is also a 
          member of the women's lacrosse team. Over her years at Lehigh, Emma has pursued her passion 
