--- a/emmamcgillis.html
+++ b/emmamcgillis.html
@@ -9,15 +9,13 @@
 <head>
     <a name="top"></a>
 
-<div class="header">
+<div class="topcontent">
 
         <div class="topnav">
             <a  href="emmamcgillis.html">HOME</a>
-            <a href="#contact">CONTACT</a>
             <a href="about.html">ABOUT</a>
           </div>
     
-
 
  <div class="emma"> EMMA </div>
 
