--- a/emmamcgillis.html
+++ b/emmamcgillis.html
@@ -9,15 +9,20 @@
 <head>
     <a name="top"></a>
 
+    <div class="topnav">
+
+        <div class="topnav"></div>
+        <a  href="emmamcgillis.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+      </div>
+
 <div class="topcontent">
 
-        <div class="topnav">
-            <a  href="emmamcgillis.html">HOME</a>
-            <a href="about.html">ABOUT</a>
-          </div>
     
 
  <div class="emma"> EMMA </div>
+
+ <div class="background"> <img src="Images/background1.png" height="750"> </div>
 
 <div class="arrow"> <a href="#content">&#8595</a> </div>
 
